<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context="pw.kussa.balanbot.remotecontrol.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_left_motor_speed"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="0" />

                <Button
                    android:id="@+id/button_left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_left" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_forward"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_forward" />

                <Button
                    android:id="@+id/button_backward"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_backward" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_right_motor_speed"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="0" />

                <Button
                    android:id="@+id/button_right"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_right" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="3">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/roll" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/yaw" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/value" />

                <TextView
                    android:id="@+id/text_roll_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0" />

                <TextView
                    android:id="@+id/text_yaw_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="3">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/setpoint" />

                <TextView
                    android:id="@+id/text_roll_setpoint"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0" />

                <TextView
                    android:id="@+id/text_yaw_setpoint"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/status" />

        <TextView
            android:id="@+id/text_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/status_disconnected"
            android:textColor="#FF0000"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Connect" />

        <Button
            android:id="@+id/button_send_values"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_send_values" />

        <Switch
            android:id="@+id/switch_balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/write_motor_speeds"
            android:textOff="OFF"
            android:textOn="ON" />

        <TextView
            android:id="@+id/text_setpoint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_setpoint" />

        <SeekBar
            android:id="@+id/seek_setpoint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100" />

        <TextView
            android:id="@+id/text_motor_multiplier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/motor_multiplier" />

        <SeekBar
            android:id="@+id/seek_motor_multiplier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100" />

        <TextView
            android:id="@+id/text_movement_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movement_speed" />

        <SeekBar
            android:id="@+id/seek_movement_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="20" />

        <TextView
            android:id="@+id/text_rotation_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rotation_speed" />

        <SeekBar
            android:id="@+id/seek_rotation_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="20" />

        <TextView
            android:id="@+id/text_k_p"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/k_p" />

        <SeekBar
            android:id="@+id/seek_k_p"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="255" />

        <TextView
            android:id="@+id/text_k_i"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/k_i" />

        <SeekBar
            android:id="@+id/seek_k_i"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="255" />

        <TextView
            android:id="@+id/text_k_d"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/k_d" />

        <SeekBar
            android:id="@+id/seek_k_d"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="255" />

    </LinearLayout>

</ScrollView>